--- a/README
+++ b/README
@@ -1,8 +1,8 @@
- _____          _     _ _ _    ____   _____ 
-|  __ \        | |   | (_) |  / __ \ / ____|
-| |__) |___  __| | __| |_| |_| |  | | (___  
-|  _  // _ \/ _` |/ _` | | __| |  | |\___ \ 
-| | \ \  __/ (_| | (_| | | |_| |__| |____) |
-|_|  \_\___|\__,_|\__,_|_|\__|\____/|_____/
-            AN OPERATING SYSTEM
-            FOR 0x10c's DCPU-16
+  ___       _  _ ___      
+ / _ \     | || |__ \     
+| | | |_  _| || |_ ) |___ 
+| | | \ \/ /__   _/ // __|
+| |_| |>  <   | |/ /| (__ 
+ \___//_/\_\  |_|____\___|
+THE FOUNDATION OF AN OPERATING
+SYSTEM FOR THE DCPU-16 
