Added the location of the docs.

--- a/README
+++ b/README
@@ -9,3 +9,4 @@ SYSTEM FOR THE DCPU-16
 
 
 Use noname22's assembler to assemble 0x42c. https://github.com/noname22/dtools/
+Read the docs at http://u.jdiez.me/0x42c/.
